Fix module filter table header alignment

--- a/sass/pages/admin.scss
+++ b/sass/pages/admin.scss
@@ -8,3 +8,7 @@
 		vertical-align: middle;
 	}
 }
+
+#module-filter-modules table.module-filter-tabs-processed thead {
+	display: table-header-group;
+}
